--- a/mon-pix/app/styles/components/_checkpoint.scss
+++ b/mon-pix/app/styles/components/_checkpoint.scss
@@ -42,7 +42,7 @@
 .checkpoint-caption {
   font-size: 0.813rem;
   font-weight: $font-light;
-  color: $white;
+  color: $grey-0;
   margin: 6px 0;
   letter-spacing: 0.4px;
   text-transform: uppercase;
