--- a/mon-pix/app/styles/components/_communication-banner.scss
+++ b/mon-pix/app/styles/components/_communication-banner.scss
@@ -1,6 +1,6 @@
 .communication-banner {
   text-align: center;
-  color: $white;
+  color: $grey-0;
   height: 56px;
   font-family: $font-open-sans;
   font-weight: 400;
@@ -21,7 +21,7 @@
   }
 
   a {
-    color: $white;
+    color: $grey-0;
     text-decoration: underline;
   }
 
