--- a/mon-pix/app/styles/components/_comparison-window.scss
+++ b/mon-pix/app/styles/components/_comparison-window.scss
@@ -52,7 +52,7 @@
   font-size: 0.875rem;
   border: none;
   background-color: transparent;
-  color: $white;
+  color: $grey-0;
 }
 
 /* Modal Header */
