--- a/mon-pix/app/styles/components/_feedback-panel.scss
+++ b/mon-pix/app/styles/components/_feedback-panel.scss
@@ -62,7 +62,7 @@
 .feedback-panel__field {
   width: 100%;
   border-radius: 3px;
-  background-color: $white;
+  background-color: $grey-0;
   border: solid 1px $grey-20;
   box-sizing: border-box;
   padding: 8px;
@@ -91,7 +91,7 @@
   margin-top: 20px;
   font-weight: bold;
   word-break: break-word;
-  background-color: $white;
+  background-color: $grey-0;
   padding: 20px;
   border: dashed $grey-70;
 
