--- a/mon-pix/app/styles/components/_form-textfield.scss
+++ b/mon-pix/app/styles/components/_form-textfield.scss
@@ -37,7 +37,7 @@
   border-radius: 3px;
   align-items: center;
   border: 2px solid $grey-20;
-  background-color: $white;
+  background-color: $grey-0;
   width: 100%;
 
   &:hover {
