--- a/mon-pix/app/styles/components/_hexagon-score.scss
+++ b/mon-pix/app/styles/components/_hexagon-score.scss
@@ -63,7 +63,7 @@
 
 .hexagon-score__information {
   position: absolute;
-  background-color: $white;
+  background-color: $grey-0;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 3px;
   z-index: 300;
