--- a/mon-pix/app/styles/components/_navbar-desktop-menu.scss
+++ b/mon-pix/app/styles/components/_navbar-desktop-menu.scss
@@ -68,7 +68,7 @@
   &:hover,
   &:focus,
   &:active {
-    color: $white;
+    color: $grey-0;
     text-decoration: none;
     background-color: $blue;
   }
@@ -81,7 +81,7 @@
   &:hover,
   &:focus,
   &:active {
-    color: $white;
+    color: $grey-0;
     background-color: $blue;
   }
 }
