--- a/mon-pix/app/styles/components/_reached-stage.scss
+++ b/mon-pix/app/styles/components/_reached-stage.scss
@@ -1,7 +1,7 @@
 .reached-stage {
   display: flex;
   flex-direction: column;
-  background: $white;
+  background: $grey-0;
   border: 1px solid rgb(231, 231, 231);
   border-radius: 16px;
   margin: 0 auto;
