--- a/mon-pix/app/styles/components/_rounded-panel.scss
+++ b/mon-pix/app/styles/components/_rounded-panel.scss
@@ -1,5 +1,5 @@
 .rounded-panel {
-  background-color: $white;
+  background-color: $grey-0;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.05);
   margin-bottom: 30px;
