--- a/mon-pix/app/styles/components/_timed-challenge-instructions.scss
+++ b/mon-pix/app/styles/components/_timed-challenge-instructions.scss
@@ -79,7 +79,7 @@
     margin-top: 22px;
     border: none;
     background-color: $green-hover;
-    color: $white;
+    color: $grey-0;
     text-transform: uppercase;
     font-size: 0.875rem;
     cursor: pointer;
