--- a/mon-pix/app/styles/components/_user-certifications-detail-banner.scss
+++ b/mon-pix/app/styles/components/_user-certifications-detail-banner.scss
@@ -3,7 +3,7 @@
   min-height: 270px;
   background: $pix-gradient;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
-  color: $white;
+  color: $grey-0;
   position: absolute;
   top: 0;
   left: 0;
