--- a/mon-pix/app/styles/components/_user-logged-menu.scss
+++ b/mon-pix/app/styles/components/_user-logged-menu.scss
@@ -63,7 +63,7 @@
   right: 0;
   top: 80px;
   z-index: 999;
-  background-color: $white;
+  background-color: $grey-0;
   max-width: 380px;
   min-width: 240px;
   border-radius: 4px;
