--- a/mon-pix/app/styles/components/campaign-participation-overview/_card.scss
+++ b/mon-pix/app/styles/components/campaign-participation-overview/_card.scss
@@ -1,6 +1,6 @@
 .campaign-participation-overview-card {
   height: 273px;
-  background: $white;
+  background: $grey-0;
   box-shadow: 0 2px 0 0 rgba(23, 43, 77, 0.06);
   border-radius: 8px;
   display: flex;
