--- a/mon-pix/app/styles/globals/_alert.scss
+++ b/mon-pix/app/styles/globals/_alert.scss
@@ -3,7 +3,7 @@
   border-radius: 0.195em;
   padding: 9px;
   margin-bottom: 11px;
-  color: $white;
+  color: $grey-0;
   text-shadow: none;
   font-size: 0.875rem;
 }
