--- a/mon-pix/app/styles/pages/_join-restricted-campaign.scss
+++ b/mon-pix/app/styles/pages/_join-restricted-campaign.scss
@@ -120,7 +120,7 @@
     display: flex;
     justify-content: space-between;
     height: 78px;
-    background-color: $white;
+    background-color: $grey-0;
     padding: 20px;
   }
 
