--- a/mon-pix/app/styles/pages/_update-expired-password-form.scss
+++ b/mon-pix/app/styles/pages/_update-expired-password-form.scss
@@ -24,7 +24,7 @@
     max-width: 609px;
     border-radius: 10px;
     padding-top: 10px;
-    background-color: $white;
+    background-color: $grey-0;
     margin: 10px auto;
 
     @include device-is('tablet') {
@@ -61,7 +61,7 @@
     width: 100%;
     text-align: center;
     border-radius: 3px;
-    color: $white;
+    color: $grey-0;
     font-size: 0.875rem;
     padding: 9px;
     margin: 10px 0;
