--- a/mon-pix/app/styles/components/_competence-card-mobile.scss
+++ b/mon-pix/app/styles/components/_competence-card-mobile.scss
@@ -17,14 +17,14 @@
 
   & a {
     text-decoration: none;
-    color: $white;
+    color: $grey-0;
   }
 }
 
 .competence-card__title {
   display: flex;
   flex-direction: column;
-  color: $white;
+  color: $grey-0;
   height: 100%;
   position: relative;
   transition: height 0.2s cubic-bezier(0.265, 0.075, 0.025, 0.99);
@@ -89,7 +89,7 @@
   justify-content: center;
   align-items: center;
   margin: 10px;
-  border: 0 solid rgba($white, 0.4);
+  border: 0 solid rgba($grey-0, 0.4);
   transition: border 0.1s ease-in;
   z-index: 1;
   height: 80px;
@@ -106,9 +106,9 @@
   display: flex;
   align-items: center;
   padding: 5px;
-  background-color: $white;
+  background-color: $grey-0;
   background-clip: padding-box;
-  border: 0 solid rgba($white, 0.4);
+  border: 0 solid rgba($grey-0, 0.4);
   border-radius: 50%;
   transition: border 0.1s ease-in;
   z-index: 1;
@@ -125,7 +125,7 @@
   font-size: 2.188rem;
 
   &--congrats {
-    color: $white;
+    color: $grey-0;
     font-weight: $font-bold;
   }
 }
@@ -147,5 +147,5 @@
 }
 
 .competence-card__score-label--congrats {
-  color: $white;
+  color: $grey-0;
 }
