--- a/mon-pix/app/styles/components/_new-information.scss
+++ b/mon-pix/app/styles/components/_new-information.scss
@@ -46,7 +46,7 @@
   }
 
   &--white-text {
-    color: $white;
+    color: $grey-0;
   }
 
   &--black-text {
@@ -134,7 +134,7 @@
 
       &:focus span,
       &:hover span {
-        border-bottom: 1px solid $white;
+        border-bottom: 1px solid $grey-0;
       }
     }
   }
