--- a/mon-pix/app/styles/components/_qroc-solution-panel.scss
+++ b/mon-pix/app/styles/components/_qroc-solution-panel.scss
@@ -6,7 +6,7 @@
   height: 26px;
   line-height: 1.5rem;
   border-radius: 3px;
-  background-color: $white;
+  background-color: $grey-0;
   box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15);
   border: solid 1px $grey-20;
   padding: 0 10px;
