--- a/mon-pix/app/styles/components/_qrocm-solution-panel.scss
+++ b/mon-pix/app/styles/components/_qrocm-solution-panel.scss
@@ -10,7 +10,7 @@
   &__answer {
     line-height: 1.625rem;
     border-radius: 3px;
-    background-color: $white;
+    background-color: $grey-0;
     box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15);
     border: solid 1px $grey-20;
     padding: 0 10px;
