--- a/mon-pix/app/styles/components/_result-item.scss
+++ b/mon-pix/app/styles/components/_result-item.scss
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   padding: 8px 0;
-  background-color: $white;
+  background-color: $grey-0;
 
   &:nth-child(odd) {
     background: $grey-10;
