--- a/mon-pix/app/styles/components/dashboard/_content.scss
+++ b/mon-pix/app/styles/components/dashboard/_content.scss
@@ -137,7 +137,7 @@
 
   &__wrapper {
     display: flex;
-    background-color: $white;
+    background-color: $grey-0;
     border-radius: 10px;
     padding: 19px 0;
     box-shadow: 0 1px 0 0 rgba(23, 43, 77, 0.12);
