--- a/mon-pix/app/styles/globals/_buttons.scss
+++ b/mon-pix/app/styles/globals/_buttons.scss
@@ -6,7 +6,7 @@
   text-align: center;
   border-radius: 5px;
   background-color: $blue;
-  color: $white;
+  color: $grey-0;
   cursor: pointer;
   border: none;
   outline: none;
@@ -25,7 +25,7 @@
     &:hover,
     &:active,
     &:focus {
-      color: $white;
+      color: $grey-0;
       text-decoration: none;
     }
   }
@@ -88,7 +88,7 @@
 
   &--red {
     background: $dark-error;
-    color: $white;
+    color: $grey-0;
 
     &:hover,
     &:active,
@@ -114,7 +114,7 @@
 
   &--dark-grey {
     background-color: $grey-60;
-    color: $white;
+    color: $grey-0;
     font-weight: $font-bold;
     font-size: 0.938rem;
 
@@ -126,7 +126,7 @@
   }
 
   &--white {
-    background-color: $white;
+    background-color: $grey-0;
     color: $grey-200;
 
     &:hover,
@@ -144,7 +144,7 @@
     &:active,
     &:focus {
       background-color: $blue;
-      color: $white;
+      color: $grey-0;
     }
   }
 
