--- a/mon-pix/app/styles/pages/_user-tutorials.scss
+++ b/mon-pix/app/styles/pages/_user-tutorials.scss
@@ -35,7 +35,7 @@
     margin: 0 0 8px;
     padding-top: 64px;
     font-size: 3rem;
-    color: $white;
+    color: $grey-0;
   }
 
   &__description {
