--- a/mon-pix/app/styles/components/_qcm-solution-panel.scss
+++ b/mon-pix/app/styles/components/_qcm-solution-panel.scss
@@ -1,33 +1,39 @@
-.qcm-panel__proposals {
-  margin: 0 0 15px;
-  font-size: 1rem;
-}
-
-.qcm-panel__proposal-item {
-  margin-left: 7px;
-}
-
 input.qcm-panel__proposal-checkbox {
   display: inline-block;
   margin-right: 10px;
 }
 
-.qcm-panel__proposal-label {
-  font-weight: $font-normal;
-  width: 100%;
+.qcm-panel {
+
+  &__proposals {
+    margin: 0 0 15px;
+    font-size: 1rem;
+  }
+
+  &__proposal-item {
+    margin-left: 7px;
+  }
+
+  &__proposal-label {
+    font-weight: $font-normal;
+    width: 100%;
+  }
 }
 
-.qcm-proposal-label__oracle[data-goodness='good'] {
-  display: inline-block;
-  color: $green;
-  font-weight: $font-heavy;
-}
+.qcm-proposal-label {
 
-.qcm-proposal-label__oracle[data-goodness='bad'][data-checked='yes'] {
-  display: inline-block;
-  text-decoration: line-through;
-}
+  &__answer-details[data-goodness='good'] {
+    display: inline-block;
+    color: $green;
+    font-weight: $font-heavy;
+  }
 
-.qcm-proposal-label__oracle[data-goodness='bad'][data-checked='no'] {
-  display: inline-block;
+  &__answer-details[data-goodness='bad'][data-checked='yes'] {
+    display: inline-block;
+    text-decoration: line-through;
+  }
+
+  &__answer-details[data-goodness='bad'][data-checked='no'] {
+    display: inline-block;
+  }
 }
