Add test on not connected page

--- a/mon-pix/app/templates/not-connected.hbs
+++ b/mon-pix/app/templates/not-connected.hbs
@@ -1,10 +1,10 @@
 {{page-title (t 'pages.not-connected.title')}}
-<div class="not-connected">
+<main class="not-connected">
   <div class="rounded-panel not-connected__container">
     <img class="pix-logo__image not-connected__logo" src="/images/pix-logo.svg" alt="Pix">
-
+    <h1 class="sr-only">{{t 'pages.not-connected.title' }}</h1>
     <p class="not-connected__text-block">
-    {{t 'pages.not-connected.message' htmlSafe=true}}
+      {{t 'pages.not-connected.message' htmlSafe=true}}
     </p>
   </div>
-</div>
+</main>
