[ORGA] Open link into new tab

--- a/orga/app/templates/authenticated/certifications.hbs
+++ b/orga/app/templates/authenticated/certifications.hbs
@@ -23,6 +23,6 @@
 
   <PixMessage @withIcon={{true}}>
     {{t 'pages.certifications.documentation-link-notice'}}
-    <a href={{t 'pages.certifications.documentation-link'}}>{{t 'pages.certifications.documentation-link-label'}}</a>
+    <a href={{t 'pages.certifications.documentation-link'}} target="_blank" rel="noopener noreferrer">{{t 'pages.certifications.documentation-link-label'}}</a>
   </PixMessage>
 </div>
