--- a/mon-pix/app/templates/assessments/challenge.hbs
+++ b/mon-pix/app/templates/assessments/challenge.hbs
@@ -10,9 +10,8 @@
     {{/if}}
   </div>
 
-  <div class="assessment-challenge__content rounded-panel--over-background-banner">
+  <main class="assessment-challenge__content rounded-panel--over-background-banner">
     <ProgressBar @assessment={{@model.assessment}} @answerId={{@model.answer.id}}/>
-    <main>
       {{component (get-challenge-component-class @model.challenge)
                 challenge=@model.challenge
                 answer=@model.answer
@@ -22,9 +21,8 @@
                 answerValidated=(route-action "saveAnswerAndNavigate")
                 resumeAssessment=(route-action "resumeAssessment")
     }}
-    </main>
-  </div>
-  <div class="challenge-item__feedback">
+  </main>
+  <div class="challenge-item__feedback" role="complementary">
     <FeedbackPanel @assessment={{@model.assessment}} @challenge={{@model.challenge}}/>
   </div>
 </div>
