--- a/mon-pix/app/templates/components/progress-bar.hbs
+++ b/mon-pix/app/templates/components/progress-bar.hbs
@@ -1,11 +1,11 @@
 {{#if this.showProgressBar}}
   <div class="progress-bar-container">
-    <h2 class="sr-only">{{t 'pages.challenge.parts.progress'}}</h2>
     <div class="progress-bar-stepnums"
          role="progressbar"
          aria-valuenow={{this.currentStepNumber}}
          aria-valuemin="1"
          aria-valuemax="5"
+         aria-label="{{t 'pages.challenge.parts.progress'}}"
       >
       {{#each this.steps as |step|}}
         <div class="progress-bar-stepnum {{step.status}}">{{step.stepnum}}</div>
@@ -23,7 +23,7 @@
     </div>
   </div>
 {{else}}
-  <div class="assessment-progress">
+  <div class="assessment-progress" role="progressbar" aria-label="{{t 'pages.challenge.parts.progress'}}">
     <div class="assessment-progress__label">{{t "pages.challenge.progress-bar.label"}}</div>
     <div class="assessment-progress__value">
       {{this.currentStepNumber}} / {{this.maxStepsNumber}}
