--- a/mon-pix/app/styles/components/_comparison-window.scss
+++ b/mon-pix/app/styles/components/_comparison-window.scss
@@ -127,3 +127,29 @@
     line-height: 26px;
   }
 }
+
+.comparison-window-solution {
+  display: flex;
+  align-items: stretch;
+  margin-top: 5px;
+
+  &__text {
+    font-size: 1rem;
+    font-weight: $font-bold;
+    color: $green;
+    display: flex;
+    margin-left: 7px;
+    position: relative;
+    bottom: 3px;
+    overflow-wrap: break-word;
+  }
+
+  &__img {
+    width: 18px;
+    height: 18px;
+  }
+
+  &--with-margin {
+    margin: 0 0 20px 20px;
+  }
+}
