--- a/mon-pix/app/templates/components/comparison-window.hbs
+++ b/mon-pix/app/templates/components/comparison-window.hbs
@@ -34,28 +34,28 @@
         </div>
         <div class="comparison-window__corrected-answers">
           {{#if this.isAssessmentChallengeTypeQcm}}
-            <QcmSolutionPanel @challenge={{@answer.challenge}} @answer={{@answer}} @solution={{this.solution}} />
+            <QcmSolutionPanel @challenge={{@answer.challenge}} @answer={{@answer}} @solution={{this.solution}} @solutionToDisplay={{this.solutionToDisplay}}  />
           {{/if}}
 
           {{#if this.isAssessmentChallengeTypeQcu}}
-            <QcuSolutionPanel @challenge={{@answer.challenge}} @answer={{@answer}} @solution={{this.solution}} />
+            <QcuSolutionPanel @challenge={{@answer.challenge}} @answer={{@answer}} @solution={{this.solution}} @solutionToDisplay={{this.solutionToDisplay}} />
           {{/if}}
 
-          {{#if (and this.isAssessmentChallengeTypeQroc this.solution)}}
+          {{#if this.isAssessmentChallengeTypeQroc}}
             <div class="comparison-window__corrected-answers--qroc">
-              <QrocSolutionPanel @answer={{@answer}} @solution={{this.solution}} />
+              <QrocSolutionPanel @answer={{@answer}} @solution={{this.solution}} @solutionToDisplay={{this.solutionToDisplay}} />
             </div>
           {{/if}}
 
           {{#if this.isAssessmentChallengeTypeQrocmInd}}
             <div class="comparison-window__corrected-answers--qrocm">
-              <QrocmIndSolutionPanel @answer={{@answer}} @solution={{this.solution}} @challenge={{@answer.challenge}} />
+              <QrocmIndSolutionPanel @answer={{@answer}} @solution={{this.solution}} @challenge={{@answer.challenge}} @solutionToDisplay={{this.solutionToDisplay}} />
             </div>
           {{/if}}
 
           {{#if this.isAssessmentChallengeTypeQrocmDep}}
             <div class="comparison-window__corrected-answers--qrocm">
-              <QrocmDepSolutionPanel @answer={{@answer}} @solution={{this.solution}} @challenge={{@answer.challenge}} />
+              <QrocmDepSolutionPanel @answer={{@answer}} @solution={{this.solution}} @challenge={{@answer.challenge}} @solutionToDisplay={{this.solutionToDisplay}}/>
             </div>
           {{/if}}
         </div>
