--- a/admin/app/templates/authenticated/certifications/certification.hbs
+++ b/admin/app/templates/authenticated/certifications/certification.hbs
@@ -2,6 +2,9 @@
   <LinkTo @route="authenticated.certifications.certification.informations" @model={{@model.id}} class="navbar-item">
     Informations
   </LinkTo>
+  <LinkTo @route="authenticated.certifications.certification.neutralization" class="navbar-item">
+    Neutralisation<br />(en chantier)
+  </LinkTo>
   <LinkTo @route="authenticated.certifications.certification.details" @model={{@model.id}} class="navbar-item">
     Détails
   </LinkTo>
