--- a/orga/app/components/routes/login-form.hbs
+++ b/orga/app/components/routes/login-form.hbs
@@ -66,7 +66,7 @@
           {{t 'pages.login-form.forgot-password'}}
         </a>
       </div>
-      {{#if this.displayRecoverLink}}
+      {{#if this.displayRecoveryLink}}
         <div>
           <div class="login-form__recover-access-link help-text">
             <LinkTo @route="join-request" class="link">{{t 'pages.login-form.active-or-retrieve'}}</LinkTo>
