--- a/orga/app/components/routes/login-or-register.hbs
+++ b/orga/app/components/routes/login-or-register.hbs
@@ -3,12 +3,14 @@
     <div>
       <img src="/pix-orga.svg" alt="Pix Orga" class="login-or-register-panel__logo">
     </div>
-    <span class="login-or-register-panel__invitation">Vous êtes invité(e) à rejoindre l'organisation {{@organizationName}}</span>
+    <span class="login-or-register-panel__invitation">{{t 'pages.login-or-register.invitation'}} {{@organizationName}}</span>
     <div class="login-or-register-panel__forms-container">
       <div class="login-or-register-panel__form">
-        <h1 class="form-title">Je m’inscris</h1>
+        <h1 class="form-title">{{t 'pages.login-or-register.register-form.title'}}</h1>
         {{#unless this.displayRegisterForm}}
-          <button type="button" id="register" {{on 'click' this.toggleFormsVisibility}} class="button button--white button--bordered">S'inscrire</button>
+          <button type="button" id="register" {{on 'click' this.toggleFormsVisibility}} class="button button--white button--bordered">
+            {{t 'pages.login-or-register.register-form.button'}}
+          </button>
         {{/unless}}
         <div class={{concat "login-or-register-panel-form__expandable" (if this.displayRegisterForm " login-or-register-panel-form__expandable--expanded")}}>
           {{#if this.displayRegisterForm}}
@@ -18,9 +20,11 @@
       </div>
       <div class="login-or-register-panel__divider"></div>
       <div class="login-or-register-panel__form">
-        <h1 class="form-title">J’ai déjà un compte</h1>
+        <h1 class="form-title">{{t 'pages.login-or-register.login-form.title'}}</h1>
         {{#if this.displayRegisterForm}}
-          <button type="button" id="login" {{on 'click' this.toggleFormsVisibility}} class="button button--white button--bordered">Se connecter</button>
+          <button type="button" id="login" {{on 'click' this.toggleFormsVisibility}} class="button button--white button--bordered">
+            {{t 'pages.login-or-register.login-form.button'}}
+          </button>
         {{/if}}
         <div class={{concat "login-or-register-panel-form__expandable" (unless this.displayRegisterForm " login-or-register-panel-form__expandable--expanded")}}>
           {{#unless this.displayRegisterForm}}
