[ADMIN] Add archive button on target profile

--- a/admin/app/components/confirm-popup.hbs
+++ b/admin/app/components/confirm-popup.hbs
@@ -2,7 +2,7 @@
   @title={{this.title}}
   @closeTitle={{this.closeTitle}}
   @submitTitle={{this.submitTitle}}
-  @size={{null}}
+  @size={{this.size}}
   @fade={{false}}
   @open={{@show}}
   @position="center"
